--- a/style.css
+++ b/style.css
@@ -44,16 +44,21 @@ Description: Notre thème WordPress de la promo !
 	font-family:"RalewayEBI";
 	src:url(assets/font/Raleway-ExtraBoldItalic.ttf);
 }
-/* --------------promo--------------- */
 
-body{
-
-	overflow-x: hidden;
-	width: 100%;
-
+h1{
+	font-family: 'RalewayB'; 
+	text-transform: uppercase; 
 }
 
-
+.container-fluid{
+	padding: 0px; 
+}
+/* --------------promo--------------- */
+body{
+	overflow-x: hidden;
+	width: 100%;
+	font-family: 'RalewayM'; 
+}
 
 .promo h1{
 	margin-top: 10%;
@@ -134,78 +139,58 @@ height: 300px;
 /* --------------fin promo--------------- */
 
 /* --------------header--------------- */
-
-
-.header {
+header {
 	background-image:url('assets/img/keyboard.jpg');
 	background-size:cover;
+	height: 90vh;
+	margin-bottom: 100px;  
 }
 
-.header .img-fluid {
-	width: 400px;
-	height: 600px;
+.img-fluid {
+	width: 23.6%; 
 	display:block;
 	margin-right:auto;
 	margin-left:auto;
-	padding-top:50px;
-	padding-bottom:50px;
+	padding-top:35px;
 }
 
+nav{
+	background-color: #282828; 
+	height: 70px; 
+}
+
+.navbar-nav{
+	flex-direction: row; 
+}
 .vide {
-  	width: 100%; 
-  height: 0; 
-  border-left: 0px solid transparent;
-  border-right:2000px solid transparent;
-  margin-top:-60px; 
-  border-bottom: 60px solid #282828 ;
-}
-
-.menu {
-	background-color:#282828;
-	color:white;
-	padding-bottom:50px;
-	padding-top:50px;
-	box-shadow: 5px 10px 5px #bababa;
-	padding: 0;
-	height: 150px;
-
-}
-
-.menu a {
-	font-family:"RalewayB";
-	font-weight:bold;
-	font-size:48px;
-	color: white;
-}
-
-#menu-cancoicode{
-	padding-left: 50%;
-	padding-top:4%;
+	width: 100%;
+	border-right:1320px solid transparent;
+	border-bottom: 60px solid #282828 ;
 }
 
 #classico{
-
-	padding-left: 25%;
+	padding-left: 120px;
 	color: white;
-	width: 400px;
-
+	font-family: 'RalewayB'; 
+	font-size: 2em; 
 }
 
-#menu-cancoicode a {
-	font-family:"RalewayM";
-	color:white;
-	font-size:36px;
-	float: right;
-}
-.navbar{
-
-	padding: 0;
+.navbar-nav .nav-link{
+	padding: 20px; 
+	color: #fff; 
+	font-size: 1.4em; 
 }
 
+#menu-menu{
+	padding-right: 100px; 
+}
+
+.navbar-nav .nav-link:hover{
+	color: #d5acae; 
+}
 /* --------------fin header--------------- */
 
 /* --------------footer--------------- */
-
 footer{
 	margin-top: 10%;
 }
@@ -215,16 +200,17 @@ footer{
 	background-color:#282828;
 }
 .loup{
-	height: 200px;
+	height: 170px;
 }
 
 .rien {
+	width: 100%; 
+	border-right:1320px solid transparent;
+	border-bottom: 60px solid #282828 ;  
+}
 
-width: 100%; 
-  height: 0; 
-  border-left: 0px solid transparent;
-  border-right:2000px solid transparent;
-border-bottom: 60px solid #282828 ;  
+.logoACS{
+	width: 80%; 
 }
 
 
@@ -473,7 +459,8 @@ form .btn {
     vertical-align: top;
     margin-right: 30px;
     float: left;
-    width: 100%;
+	width: 100%;
+	position: relative;
 }
 
 .project figure {
@@ -493,6 +480,47 @@ form .btn {
 
 }
 
+.plus{
+	background-color: rgba(245, 152, 157, 0.5); 
+	display: inline;
+	height: 100%; 
+	width: 100%; 
+	opacity: 0; 
+	position: absolute; 
+	z-index:80; 
+	transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	transition-delay: 25ms; 
+}
+
+.plus svg{
+	margin-top: 130px; 
+}
+
+.plus p{
+	bottom: 0;
+	display: block;
+	opacity: 0;
+	font-family: 'RalewayB';
+	font-size: 2em; 
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.plus:hover{
+	opacity: 1; 
+	transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	cursor: pointer;
+}
+
+.plus:hover p{
+	opacity: 1; 
+	transform: translateY(-100%);
+	transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	transition-delay: 25ms; 
+}
+
 .project figure img {
     width: 100%;
 }
@@ -503,15 +531,17 @@ form .btn {
     left: 0px;
     right: 0px;
     z-index: 1;
-    opacity: 0.4;
+    opacity: 0.5;
     background-color: #f5989d;
     transform: skewY(-10deg) translateY(-50px);
-    color: #fff;
-    font-size: 2em;
     padding: 32%;
-    text-align: center;
-    vertical-align: middle;
 }
+
+.actions:hover{
+	width: 100%; 
+}
+
+
 
 .img-responsive {
     overflow: hidden;
@@ -610,7 +640,7 @@ form .btn {
     border-left: 1150px solid rgb(255, 255, 255);
     border-bottom: 0px solid transparent;  
   
-   margin-top: 273px;
+   margin-top: 290px;
 }
 .triangle-left {
     width: 100%;
@@ -626,7 +656,7 @@ width: 100%;
 height:  340px;  
 background-repeat: no-repeat;
 background-position: center;
-background-size: cover 50%;
+background-size: 50%;
 }
 
 
@@ -688,9 +718,10 @@ background-size: cover 50%;
 }
 
 .lire{
-    background-color: black;
+    background-color: #282828; 
     color:#fff;
-    margin-top: 30px;
+	margin-top: 30px;
+	width: 50%; 
 }
 .card-title{
     color:#fff;
