ajout reseau sociaux

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Le thème cancoicode
+Theme Name: Le thème blogacs
 Author: Benoit Antoine Mourad
 Author URI: http://monsiteweb.com
 Description: Notre thème WordPress de la promo !
